src/styles/components/_collapse.scss
.collapsible {
  display: block;
  margin: 50px auto;
  padding: 20px;
  min-width: 310px;
  max-width: 1023px;
}
.collapsible-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background: $red;
  color: $white;
  padding: 0 10px;
  border-radius: 5px;
  height: 47px;
  max-width: 1023px;
}

.collapsible-toggle {
  background: $red;
  background-repeat: no-repeat;
  background-position: center;
  text-indent: -9999px;
  width: 24px;
  height: 13px;
  border: none;
  cursor: pointer;
}

.collapsible-toggle.open {
  background-image: url("../../assets/image/toggle-up.png");
}

.collapsible-toggle.closed {
  background-image: url("../../assets/image/toggle-down.png");
}

.collapsible-body {
  padding: 20px 10px;
  background: $grey;
  color: $red;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  max-width: 1023px;
}

